# Faelight-Engine

./: CMakeLists.txt  LICENSE  README.md
common/: log.cppm  signals.cppm
core/render/: vulkanimpl.cppm
entrypoint/: main.cpp
shaders/: compile.bat  default.frag  default.vert  frag.spv  vert.spv
